Add Swagger for API documentation